--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ InitTestScene*.unity*
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
+You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
