--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ InitTestScene*.unity*
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
+You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
