--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@ You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
 You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
+You, Again/Assets/Fonts/Minecraft/Minecraft SDF.asset
